--- a/auction_module/static/src/assets/css/style.css
+++ b/auction_module/static/src/assets/css/style.css
@@ -118,6 +118,9 @@ header {
 .points-left {
   flex: 0 0 15%;
 }
+.max-call {
+  flex: 0 0 8%;
+}
 .actions {
   flex: 0 0 15%;
 }
@@ -209,6 +212,13 @@ a {
   height: 30px;
 }
 .points-left span {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #757678;
+}
+
+.max-call span {
   font-size: 13px;
   font-weight: 400;
   line-height: 21px;
@@ -368,7 +378,7 @@ a {
 }
 .player-name {
   font-family: poppins;
-  font-size: 50px;
+  font-size: 100px;
   line-height: 60px;
   font-weight: bold;
   color: #0a1429;
@@ -578,7 +588,7 @@ a {
     line-height: 8rem;
   }
   .player-name {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 }
 @media (max-width: 1300px) {
@@ -595,7 +605,7 @@ a {
     line-height: 6rem;
   }
   .player-name {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
   }
 
   .single-player-image .sp-image {
