--- a/auction_module/report/auction_report_template.xml
+++ b/auction_module/report/auction_report_template.xml
@@ -34,7 +34,7 @@
                                         <h4>Team Name: <t t-esc="doc.team_id.name"/></h4>
                                     </td>
                                     <td style="padding: 10px; border: 1px solid #ddd;">
-                                        <h4>Manager: <t t-esc="doc.manager"/></h4>
+                                        <h4>Owner: <t t-esc="doc.manager"/></h4>
                                     </td>
                                     <td style="padding: 10px; border: 1px solid #ddd;">
                                         <h4>Icon Player: <t t-esc="','.join([player_id.name for player_id in doc.team_id.key_player_ids])"/></h4>
