--- a/auction_module/static/src/assets/css/style.css
+++ b/auction_module/static/src/assets/css/style.css
@@ -378,7 +378,7 @@ a {
 }
 .player-name {
   font-family: poppins;
-  font-size: 100px;
+  font-size: 60px;
   line-height: 60px;
   font-weight: bold;
   color: #0a1429;
@@ -400,7 +400,7 @@ a {
   overflow: hidden;
 }
 .player-profession-header {
-  background-color: #7a8aab;
+  background-color: #2252b5;
   text-align: center;
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -588,7 +588,7 @@ a {
     line-height: 8rem;
   }
   .player-name {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
   }
 }
 @media (max-width: 1300px) {
@@ -605,7 +605,7 @@ a {
     line-height: 6rem;
   }
   .player-name {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
   }
 
   .single-player-image .sp-image {
