--- a/auction_module/static/src/assets/css/style.css
+++ b/auction_module/static/src/assets/css/style.css
@@ -280,6 +280,15 @@ a {
   font-size: 13px;
   color: #000;
 }
+.icon-player-point {
+  background-color: rgba(100, 255, 75, 1);
+  border-radius: 30px;
+}
+.icon-player-point {
+  font-size: 13px;
+  color: #000;
+  font-weight: 700;
+}
 .player-details a {
   font-size: 16px;
   font-weight: 400;
